--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main"/>
-	<classpathentry excluding="net/iubris/aa/spheres/render/jme3/Rendering.java" kind="src" path="src/render"/>
+	<classpathentry excluding="net/iubris/aa/spheres/render/jme3/Rendering.java|net/iubris/aa/spheres/render/swing/" kind="src" path="src/render"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="libs/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="/usr/lib/openmpi/lib/mpi.jar"/>
 	<classpathentry kind="lib" path="libs/stdlib.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/j3d"/>
 	<classpathentry kind="output" path="bin"/>
