--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="libs/stdlib.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jfreechart"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
