--- a/java/montecarlo_spheres_java/.classpath
+++ b/java/montecarlo_spheres_java/.classpath
@@ -9,15 +9,14 @@
 	<classpathentry excluding="net/iubris/aa/spheres/render/jme3/Rendering.java|net/iubris/aa/spheres/render/swing/" kind="src" path="src/render"/>
 	<classpathentry kind="src" path="src/chart"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/j3d">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="montecarlo_spheres/libs/i386"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="libs/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="libs/stdlib.jar"/>
 	<classpathentry kind="lib" path="libs/jomp1.0b.jar"/>
 	<classpathentry kind="lib" path="libs/Pyjama-1.2.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jfreechart"/>
+	<classpathentry kind="lib" path="libs/j3d/j3dcore.jar"/>
+	<classpathentry kind="lib" path="libs/j3d/j3dutils.jar"/>
+	<classpathentry kind="lib" path="libs/j3d/vecmath.jar"/>
+	<classpathentry kind="lib" path="libs/jfreechart/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="libs/jfreechart/jfreechart-1.0.19.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
